// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/shared-components/ToggleCheckbox component Snapshot tests with react-test-renderer toggle checkbox is rendered correctly when checked 1`] = `
<div
  className="ToggleCheckbox ToggleCheckbox--active"
  onClick={[Function]}
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</div>
`;

exports[`app/shared-components/ToggleCheckbox component Snapshot tests with react-test-renderer toggle checkbox is rendered correctly when not checked 1`] = `
<div
  className="ToggleCheckbox"
  onClick={[Function]}
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</div>
`;
